@@ -1,5 +1,5 @@
 /*
- * Copyright © 2024 Indiana University
+ * Copyright © 2025 Indiana University
  * All rights reserved.
  *
  * BSD 3-Clause License
@@ -31,16 +31,19 @@
  */
 package iu.type.test;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
 
 import java.io.InputStream;
 import java.lang.annotation.Annotation;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayDeque;
@@ -58,7 +61,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 
 import edu.iu.IuIterable;
-import edu.iu.legacy.Incompatible;
 import edu.iu.legacy.Repurposed;
 import edu.iu.test.IuTest;
 import edu.iu.test.IuTestLogger;
@@ -80,7 +82,7 @@ public class IuComponentTest extends IuTypeTestCase {
 
 	@Test
 	public void testMustProvideNonBundledDependencies() {
-		assertEquals("Not all depdendencies were met, missing [parsson-1.1+]",
+		assertEquals("Not all dependencies were met, missing [parsson-1.1+]",
 				assertThrows(IllegalArgumentException.class,
 						() -> IuComponent.of(TestArchives.getComponentArchive("testruntime"))).getMessage());
 	}
@@ -101,7 +103,7 @@ public class IuComponentTest extends IuTypeTestCase {
 	public void testLoadsRuntime() throws Exception {
 		var publicUrlThatWorksAndReturnsJson = "https://idp-stg.login.iu.edu/.well-known/openid-configuration";
 		String expected;
-		try (InputStream in = new URL(publicUrlThatWorksAndReturnsJson).openStream()) {
+		try (InputStream in = URI.create(publicUrlThatWorksAndReturnsJson).toURL().openStream()) {
 			expected = new String(in.readAllBytes());
 		} catch (Throwable e) {
 			e.printStackTrace();
@@ -114,10 +116,8 @@ public class IuComponentTest extends IuTypeTestCase {
 			assertTrue(controller.layer().findModule("iu.util.type.testruntime").isPresent());
 		}, TestArchives.getComponentArchive("testruntime"),
 				TestArchives.getProvidedDependencyArchives("testruntime"))) {
-			assertTrue(component.toString().startsWith("Component [parent=null, kind=MODULAR_JAR, versions=["),
-					component::toString);
 
-			assertEquals(Kind.MODULAR_JAR, component.kind());
+			assertEquals(Kind.JAR, component.kind());
 			assertEquals("iu-java-type-testruntime", component.version().name());
 			assertEquals(IuTest.getProperty("project.version"), component.version().implementationVersion());
 
@@ -144,46 +144,7 @@ public class IuComponentTest extends IuTypeTestCase {
 		}
 	}
 
-	@Test
-	public void testLoadsLegacy() throws Exception {
-		var publicUrlThatWorksAndReturnsJson = "https://idp-stg.login.iu.edu/.well-known/openid-configuration";
-		String expected;
-		try (InputStream in = new URL(publicUrlThatWorksAndReturnsJson).openStream()) {
-			expected = new String(in.readAllBytes());
-		} catch (Throwable e) {
-			e.printStackTrace();
-			Assumptions.abort(
-					"Expected this to be a public URL that works and returns JSON " + publicUrlThatWorksAndReturnsJson);
-			return;
-		}
-
-		try (var component = IuComponent.of(TestArchives.getComponentArchive("testlegacy"))) {
-
-			assertEquals(Kind.LEGACY_JAR, component.kind());
-			assertEquals("iu-java-type-testlegacy", component.version().name());
-			assertEquals(IuTest.getProperty("project.version"), component.version().implementationVersion());
-
-			var resources = component.resources().iterator();
-			assertTrue(resources.hasNext());
-			while (resources.hasNext()) {
-				final var resource = resources.next();
-				assertInstanceOf(resource.type().erasedClass(), resource.get());
-			}
-
-			var contextLoader = Thread.currentThread().getContextClassLoader();
-			var loader = component.classLoader();
-			try {
-				Thread.currentThread().setContextClassLoader(loader);
-				var urlReader = loader.loadClass("edu.iu.legacy.LegacyUrlReader");
-				var urlReader$ = urlReader.getConstructor().newInstance();
-				assertEquals(urlReader.getMethod("parseJson", String.class).invoke(urlReader$, expected),
-						urlReader.getMethod("get", String.class).invoke(urlReader$, publicUrlThatWorksAndReturnsJson));
-			} finally {
-				Thread.currentThread().setContextClassLoader(contextLoader);
-			}
-		}
-	}
-
+	@SuppressWarnings("unchecked")
 	@Test
 	public void testLoadsTestComponent() throws Exception {
 		// TODO: remove after implementing @AroundConstruct
@@ -192,11 +153,14 @@ public class IuComponentTest extends IuTypeTestCase {
 				UnsupportedOperationException.class,
 				t -> "@AroundConstruct not supported in this version".equals(t.getMessage()));
 		IuTestLogger.allow("iu.type.Component", Level.WARNING, "Invalid class invalid.*", ClassFormatError.class);
-		try (var parent = IuComponent.of(TestArchives.getComponentArchive("testruntime"),
+		final var cb = mock(Consumer.class);
+		try (var parent = IuComponent.of(cb, TestArchives.getComponentArchive("testruntime"),
 				TestArchives.getProvidedDependencyArchives("testruntime"));
 				var component = parent.extend(TestArchives.getComponentArchive("testcomponent"))) {
+			assertNotNull(parent.moduleLayer());
+			assertDoesNotThrow(parent::toString);
 
-			assertEquals(Kind.MODULAR_JAR, component.kind());
+			assertEquals(Kind.JAR, component.kind());
 			assertEquals("iu-java-type-testcomponent", component.version().name());
 			assertEquals(IuTest.getProperty("project.version"), component.version().implementationVersion());
 
@@ -233,13 +197,16 @@ public class IuComponentTest extends IuTypeTestCase {
 				}
 			assertTrue(found);
 
-			var resources = component.resources().iterator();
-			assertTrue(resources.hasNext());
-			var resource = resources.next();
-			assertEquals("testResource", resource.name());
-			// TODO: STARCH-653 Implement @AroundConstruct
-			assertThrows(UnsupportedOperationException.class, resource::get);
-			assertFalse(resources.hasNext());
+			final Set<String> expected = new HashSet<>(Set.of("urlReader", "priorityResource", "testResource"));
+			for (final var resource : component.resources()) {
+				final var name = resource.name();
+				assertTrue(expected.remove(name), () -> name + " " + expected);
+				if (name.equals("testResource")) {
+					// TODO: STARCH-653 Implement @AroundConstruct
+					assertThrows(UnsupportedOperationException.class, resource::get);
+				}
+			}
+			assertTrue(expected.isEmpty(), expected::toString);
 
 			final var target = component.classLoader().loadClass("edu.iu.type.testcomponent.TestBean");
 			final var view = IuComponent.scan(target);
@@ -256,7 +223,7 @@ public class IuComponentTest extends IuTypeTestCase {
 				var component = parent.extend(TestArchives.getComponentArchive("testweb"),
 						TestArchives.getProvidedDependencyArchives("testweb"))) {
 
-			assertEquals(Kind.MODULAR_WAR, component.kind());
+			assertEquals(Kind.WAR, component.kind());
 			assertEquals("iu-java-type-testweb", component.version().name());
 			assertEquals(IuTest.getProperty("project.version"), component.version().implementationVersion());
 
@@ -268,41 +235,18 @@ public class IuComponentTest extends IuTypeTestCase {
 			assertTrue(interfaces.hasNext());
 			assertSame(testRuntime, interfaces.next().erasedClass());
 
-			var expectedResources = new HashSet<>(Set.of("index.html", "WEB-INF/web.xml"));
+			final var annotated = component.annotatedTypes(Resource.class);
+			assertTrue(annotated.iterator().hasNext());
+			assertEquals("edu.iu.type.testruntime.UrlReader", annotated.iterator().next().autoboxClass().getName());
+
+			var expectedResources = new HashSet<>(Set.of("urlReader", "index.html", "WEB-INF/web.xml"));
 			for (final var r : component.resources()) {
-				assertInstanceOf(byte[].class, r.get());
+				if (r.name().equals("urlReader"))
+					assertEquals("edu.iu.type.testruntime.UrlReader", r.type().autoboxClass().getName());
+				else
+					assertInstanceOf(byte[].class, r.get());
 				assertTrue(expectedResources.remove(r.name()));
 			}
-			assertTrue(expectedResources.isEmpty(), expectedResources::toString);
-		}
-	}
-
-	@Test
-	public void testLoadsLegacyWar() throws Exception {
-		try (var parent = IuComponent.of(TestArchives.getComponentArchive("testlegacy"));
-				var component = parent.extend(TestArchives.getComponentArchive("testlegacyweb"),
-						TestArchives.getProvidedDependencyArchives("testlegacyweb"))) {
-
-			assertEquals(Kind.LEGACY_WAR, component.kind());
-			assertEquals("iu-java-type-testlegacyweb", component.version().name());
-			assertEquals(IuTest.getProperty("project.version"), component.version().implementationVersion());
-
-			final Set<String> interfaces = new HashSet<>();
-			IuIterable.map(component.interfaces(), IuType::name).forEach(interfaces::add);
-			assertTrue(interfaces.contains("edu.iu.legacy.LegacyInterface"), interfaces::toString);
-			assertTrue(interfaces.contains("edu.iu.legacy.NotResource"), interfaces::toString);
-
-			var incompatible = component.annotatedTypes(Incompatible.class).iterator();
-			assertTrue(incompatible.hasNext());
-			assertEquals("edu.iu.legacy.LegacyResource", incompatible.next().name());
-			assertFalse(incompatible.hasNext(), () -> incompatible.next().name());
-
-			var testsShouldBeEmpty = component.annotatedTypes(Test.class).iterator();
-			assertFalse(testsShouldBeEmpty.hasNext(), () -> testsShouldBeEmpty.next().name());
-
-			var expectedResources = new HashSet<>(Set.of("two", "legacyResource", "index.jsp", "WEB-INF/web.xml"));
-			for (final var r : component.resources())
-				assertTrue(expectedResources.remove(r.name()));
 			assertTrue(expectedResources.isEmpty(), expectedResources::toString);
 		}
 	}
